version/0.12/_sources/examples/05-file-IO/index.rst.txt


.. _sphx_glr_examples_05-file-IO:

.. _file_IO:

File manipulation and input-output examples
===========================================
These examples show how to manipulate files,
as well as importing or exporting from or to specific formats.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use HDF5 format to export and compare simple precision versus double ...">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_00-hdf5_double_float_comparison_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05-file-IO_00-hdf5_double_float_comparison.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HDF5 export and compare precision</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to get reduced matrices and export them to HDF5 and CSV files.">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_01-reduced_matrices_export_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05-file-IO_01-reduced_matrices_export.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get reduced matrices and make export</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows you how to use the HDF5 format to export results and meshed regions in an H5...">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_02-hdf5_serialize_and_read_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05-file-IO_02-hdf5_serialize_and_read.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HDF5 export and import operations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to write and upload files on the server machine and then download them b...">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_04-basic-load-file_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05-file-IO_04-basic-load-file.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Working with a result file</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/05-file-IO/00-hdf5_double_float_comparison
   /examples/05-file-IO/01-reduced_matrices_export
   /examples/05-file-IO/02-hdf5_serialize_and_read
   /examples/05-file-IO/04-basic-load-file

